--- a/style.css
+++ b/style.css
@@ -21,13 +21,13 @@ body {
 .container {
   max-width: 415px;
   min-width: 375px;
-  margin: 0 auto;
+  margin: 50px auto;
   text-align: center;
   background-color: white;
   border-radius: 15px;
   box-shadow: 0px 0px 20px 0px #ccc;
   overflow: hidden;
-  transform: scale(0.8);
+  /* transform: scale(0.8); */
 }
 .container .img img {
   width: 100%;
