--- a/style.css
+++ b/style.css
@@ -27,7 +27,12 @@ body {
   border-radius: 15px;
   box-shadow: 0px 0px 20px 0px #ccc;
   overflow: hidden;
-  /* transform: scale(0.8); */
+}
+@media (min-width: 475px) {
+  .container {
+    margin-left: 20px;
+    margin-right: 20px;
+  }
 }
 .container .img img {
   width: 100%;
