--- a/style.css
+++ b/style.css
@@ -17,22 +17,20 @@ body {
   font-family: "Outfit", sans-serif;
   font-family: "Red Hat Display", sans-serif;
   background-color: var(--Pale-blue);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 .container {
   max-width: 415px;
   min-width: 385px;
-  margin: 100px auto;
+  margin: 100px 25px;
   text-align: center;
   background-color: white;
   border-radius: 15px;
   box-shadow: 0px 0px 20px 0px #ccc;
   overflow: hidden;
-}
-@media (min-width: 767px) {
-  .container {
-    margin-left: 20px;
-    margin-right: 20px;
-  }
 }
 .container .img img {
   width: 100%;
