--- a/style.css
+++ b/style.css
@@ -60,6 +60,7 @@ body {
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
+  gap: 15px;
   width: 100%;
   margin-left: 20px;
 }
